--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
   <h1>
-    Welcome to {{ title }}!
+   <input id='name' type='text' (input)="show()" [(ngModel)]=name>
   </h1>
 
- <app-first></app-first>
+
