--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
   <h1>
-   <input id='name' type='text' (input)="show()" [(ngModel)]=name>
+   <input id='name' type='text' (focus)="focus()" (blur)="blur()" (select)="select()" (input)="show()" [(ngModel)]=name>
   </h1>
 
 
